# mav_tracker

./: .gitignore  ACADOS_nmpc_tracker_solver.json  README.md  env_set.sh
mav_fake_simulator/: CMakeLists.txt  package.xml  setup.py
mav_fake_simulator/config/: mav_fake_simulator.yaml  test_flight.rviz
mav_fake_simulator/identification/: bag_processing.m  input_output_data.mat  mav_full_sys_identification.m  mav_full_sys_model.c  mav_full_sys_model.mexa64  mav_pitch_identification.m  mav_roll_identification.m  mav_roll_pitch_model.m  stamp_to_seconds.m
mav_fake_simulator/launch/: mav_fake_simulator.launch  mav_fake_simulator_test_flight.launch
mav_fake_simulator/resources/: mav_fake_simulator.yaml
mav_fake_simulator/scripts/: integrator.py  mav_dynamics.py  mav_fake_simulator.py  test_flight.py
mav_nmpc_tracker/: CMakeLists.txt  package.xml  setup.py
mav_nmpc_tracker/config/: nmpc_tracker.yaml
mav_nmpc_tracker/launch/: mav_nmpc_tracker.launch
mav_nmpc_tracker/resources/: nmpc_tracker.yaml
mav_nmpc_tracker/scripts/: ACADOS_nmpc_tracker_solver.json  nmpc_fly_to_origin.py  nmpc_tracker_node.py  nmpc_tracker_solver.py
mav_nmpc_tracker/solver/: Makefile  acados_sim_solver_mav_nmpc_tracker_model.c  acados_sim_solver_mav_nmpc_tracker_model.h  acados_solver_mav_nmpc_tracker_model.c  acados_solver_mav_nmpc_tracker_model.h  acados_solver_sfunction_mav_nmpc_tracker_model.c  main_mav_nmpc_tracker_model.c  main_sim_mav_nmpc_tracker_model.c  make_sfun_mav_nmpc_tracker_model.m
mav_nmpc_tracker/solver/mav_nmpc_tracker_model_model/: mav_nmpc_tracker_model_expl_ode_fun.c  mav_nmpc_tracker_model_expl_vde_adj.c  mav_nmpc_tracker_model_expl_vde_forw.c
mav_nmpc_tracker/test/: boxes.rviz  message.txt
