<?xml version="1.0"?>
<package format="2">
  <name>mav_fake_simulator</name>
  <version>0.0.1</version>
  <description>
    Fake simulator for simulating mav motions
  </description>

  <maintainer email="zhuhai.frank@gmail.com">Hai Zhu</maintainer>

  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>mav_msgs</depend>
  <depend>tf</depend>

</package>
